--- a/public/pricing.css
+++ b/public/pricing.css
@@ -327,8 +327,6 @@ nav a:hover {
   header {
     display: grid;
     grid-template-columns: .2fr auto minmax(600px, 3fr) auto .2fr;
-    /* border-radius: 0px 0px 2rem 2rem; */
-    position: fixed;
   }
   
   .logo {
@@ -683,6 +681,7 @@ nav a:hover {
   border-top: 2px solid var(--color-blue);
   border-bottom: 2px solid var(--color-blue);
   padding: 1em 0em;
+  margin-bottom: 1em;
 }
 
 .plan-wrapper .length h4{
